fix: improve isSynchronized method
use eventlatest collection to improve synchronization state computation